<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="16dp"
    android:background="@color/white">

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/baseline_app_registration_24"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="32dp"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

<EditText
    android:id="@+id/username_edittext"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/username"
    android:textColorHint="@color/black"
    android:inputType="text"/>

<EditText
    android:id="@+id/email_edittext"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/email"
    android:textColorHint="@color/black"
    android:inputType="textEmailAddress"
    android:layout_marginTop="16dp"/>

<EditText
    android:id="@+id/password_edittext"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/password"
    android:textColorHint="@color/black"
    android:inputType="textPassword"
    android:layout_marginTop="16dp"/>

<EditText
    android:id="@+id/confirm_password_edittext"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/confirm_password"
    android:textColorHint="@color/black"
    android:inputType="textPassword"
    android:layout_marginTop="16dp"/>

<Button
    android:id="@+id/register_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/register"
    android:layout_marginTop="32dp"/>

</LinearLayout>


    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    tools:context=".Register">-->

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->

<!--    <?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".Registration">-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->