<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>

<!--    <item-->
<!--        android:id="@+id/nav_sync"-->
<!--        android:icon="@drawable/baseline_sync_24"-->
<!--        android:title="Sync"/>-->

<!--    <item-->
<!--        android:id="@+id/nav_delete"-->
<!--        android:icon="@drawable/baseline_delete_24"-->
<!--        android:title="Delete"/>-->

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/baseline_settings_suggest_24"
        android:title="@string/setting"/>


    <item android:title="Profile">

        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/baseline_login_24"
                android:title="@string/login"/>
        </menu>
    </item>

<!--    <item android:title="Communicate">-->

<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/baseline_share_24"-->
<!--                android:title="Share"/>-->
<!--        </menu>-->

<!--    </item>-->


</menu>