<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".MainActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:id="@+id/idToolbar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->
<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->
<!--                <ImageView-->
<!--                    android:layout_width="40dp"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:id="@+id/iconmusic"-->
<!--                    android:src="@drawable/music"-->
<!--                    android:gravity="center"/>-->
<!--&lt;!&ndash;                <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_height="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:text="@string/mymusic"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_toRightOf="@+id/iconmusic"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:gravity="center"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:textStyle="bold"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:padding="4dp"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_marginEnd="15dp"&ndash;&gt;-->
<!--&lt;!&ndash;                    />&ndash;&gt;-->
<!--            </RelativeLayout>-->
<!--        </androidx.appcompat.widget.Toolbar>-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idLatestCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:layout_editor_absoluteX="0dp"
            tools:listitem="@layout/latest_categories_items"
            tools:ignore="MissingConstraints" />

<!--        app:layout_constraintTop_toBottomOf="@+id/idToolbar"-->

        <TextView
            android:id="@+id/SuggestedView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/suggested"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/idLatestCategories"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idSuggestedCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/SuggestedView"
            tools:layout_editor_absoluteX="0dp"
            tools:listitem="@layout/suggest_items" />

        <TextView
            android:id="@+id/YourListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/your_list"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/idSuggestedCategories"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idYourListCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/YourListView"
            tools:layout_editor_absoluteX="16dp"
            tools:listitem="@layout/categories_items" />

        <TextView
            android:id="@+id/idLiveConcertView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/live_concert"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/idYourListCategories"
            tools:layout_editor_absoluteX="0dp" />

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idLiveConcertView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>